# news-classification-tgbot

./: .pre-commit-config.yaml  LICENSE  README.md  config.py  data.dvc  main.py  pyproject.toml
.dvc/: config
news_classification_tgbot/filters/: __init__.py  main.py
news_classification_tgbot/handlers/: main.py
news_classification_tgbot/keyboards/: __init__.py  main.py
news_classification_tgbot/prediction/: __init__.py  predictor.py  vectorizer.py
news_classification_tgbot/routers/: __init__.py  common.py
news_classification_tgbot/services/: __init__.py  prediction.py  words_count.py
news_classification_tgbot/states/: __init__.py  main.py
news_classification_tgbot/templates/: __init__.py  common.py  main.py
