[tool.poetry]
name = "news-classification-tgbot"
version = "0.1.0"
description = "The package contains telegram bot code that determines the topic of the article based on the transmitted text"
authors = ["Anton Zaitsev <antonzaitsev474@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "news_classification_tgbot"}]

[tool.poetry.dependencies]
python = "^3.10"
catboost = "^1.2.2"
aiogram = "^3.3.0"
wordcloud = "^1.9.3"
dvc = "^3.41.0"
dvc-gdrive = "^3.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
